--- a/Changes
+++ b/Changes
@@ -6,6 +6,10 @@ Home page:    <https://metacpan.org/release/TOBYINK-Pod-HTML>
 Bug tracker:  <http://rt.cpan.org/Dist/Display.html?Queue=TOBYINK-Pod-HTML>
 Maintainer:   Toby Inkster <mailto:tobyink@cpan.org>
 
+0.002  2013-03-21
+
+ - (Addition) Allow non-Perl languages to be syntax highlighted too.
+
 0.001  2013-02-26  # Initial release
 
 
