Import of TOBYINK/TOBYINK-Pod-HTML-0.003 from CPAN.
gitpan-cpan-distribution: TOBYINK-Pod-HTML
gitpan-cpan-version:      0.003
gitpan-cpan-path:         TOBYINK/TOBYINK-Pod-HTML-0.003.tar.gz
gitpan-cpan-author:       TOBYINK
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -6,6 +6,14 @@ Home page:    <https://metacpan.org/release/TOBYINK-Pod-HTML>
 Bug tracker:  <http://rt.cpan.org/Dist/Display.html?Queue=TOBYINK-Pod-HTML>
 Maintainer:   Toby Inkster <mailto:tobyink@cpan.org>
 
+0.003  2013-04-10
+
+ - (Addition) Syntax highlighting for Semantic Web related languages using
+   Syntax::Highlight::RDF.
+ - (Bugfix) Switching syntax highlight language in documents that have no
+   NAME section was broken due to Pod::Simple::PullParser's look-ahead
+   feature. This should now work.
+
 0.002  2013-03-21
 
  - (Addition) Allow non-Perl languages to be syntax highlighted too.
