--- a/README
+++ b/README
@@ -128,12 +128,14 @@ DESCRIPTION
     Then all subsequent code samples will be highlighted as Haskell, until
     another such command is seen.
 
-    While syntax highlighting for Perl uses PPI::HTML, alternative syntax
-    highlighting uses Syntax::Highlight::Engine::Kate, so you need to have
-    that installed if you want that feature. Note that the language names
-    defined by Syntax::Highlight::Engine::Kate are case-sensitive, and
-    TOBYINK::Pod::HTML makes no attempt at case-folding, so you must use the
-    correct case!
+    While syntax highlighting for Perl uses PPI::HTML, syntax highlighting
+    for other languages uses either Syntax::Highlight::RDF or
+    Syntax::Highlight::Engine::Kate as appropriate, so you need to have them
+    installed if you want this feature.
+
+    Note that the language names defined by Syntax::Highlight::Engine::Kate
+    are case-sensitive, and TOBYINK::Pod::HTML makes no attempt at
+    case-folding, so you must use the correct case!
 
     Note that only the PPI highlighter supports line numbering.
 
