Import of TOBYINK/TOBYINK-Pod-HTML-0.005 from CPAN.
gitpan-cpan-distribution: TOBYINK-Pod-HTML
gitpan-cpan-version:      0.005
gitpan-cpan-path:         TOBYINK/TOBYINK-Pod-HTML-0.005.tar.gz
gitpan-cpan-author:       TOBYINK
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -6,6 +6,11 @@ Home page:    <https://metacpan.org/release/TOBYINK-Pod-HTML>
 Bug tracker:  <http://rt.cpan.org/Dist/Display.html?Queue=TOBYINK-Pod-HTML>
 Maintainer:   Toby Inkster (TOBYINK) <tobyink@cpan.org>
 
+0.005	2014-03-03
+
+ - Updated: Update links to use https://metacpan.org/pod/ instead of
+   https://metacpan.org/module/.
+
 0.004	2013-11-18
 
  [ Bug Fixes ]
